2009-09-08  Csaba Nemethi <csaba.nemethi@t-online.de>

	* tablelistPublic.tcl:       Added support for mentry widgets of type
	* CHANGES.txt:               "IPv6Addr" as edit windows.
	* scripts/tablelistEdit.tcl:
	* doc/tablelistMentry.html:
	* doc/tablelistWidget.html:

	* scripts/tablelistBind.tcl: Minor correction.

	* scripts/tclIndex: Newly generated.

2009-08-30  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Extended the list of supported Wcb
	  options for text widgets used for interactive cell editing.

2009-08-29  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl: Bumped the version number to 4.12.
	* *.txt:

	* scripts/tablelistEdit.tcl:   Added support for interactive cell
	* scripts/tablelistThemes.tcl: editing with the aid of the ttk::spinbox
	* scripts/tablelistUtil.tcl:   widget; added support for the themes
	  "keramik_alt" and "vista"; improved the support for a few themes.

	* scripts/tclIndex: Newly generated.

	* doc/tablelistBWidget.html:  Updated the documentation.
	* doc/tablelistCombobox.html:
	* doc/tablelist.html:
	* doc/tablelistIwidgets.html:
	* doc/tablelistMentry.html:
	* doc/tablelistTile.html:
	* doc/tablelistWidget.html:
	* doc/*.png:

	* ../../examples/tablelist/*.tcl: Appended the version number to
	  "package require tablelist(_tile)".

2009-08-15  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistWidget.tcl: Removed two update-invocations for Mac
	  OS X Aqua that were present to work around a scrolling-related bug in
	  old Mac-Tk versions but turned out to cause problems in newer ones.

2009-07-16  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl:   Added support for the native "Aqua-blue"
	* scripts/tablelistThemes.tcl: background, set for the header label of
	* scripts/tablelistUtil.tcl:   the sort column (for Mac-Tk with Cocoa).
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

2009-06-07  Csaba Nemethi <csaba.nemethi@t-online.de>
