@@ -164,8 +164,8 @@
   <h3><a name="ov_get"></a>How to get it?</h3>
 
   <p>Tablelist is available for free download from the same URL as Wcb.&nbsp;
-  The distribution file is <code>tablelist4.11.tar.gz</code> for UNIX and
-  <code>tablelist4_11.zip</code> for Windows.&nbsp; These files contain the
+  The distribution file is <code>tablelist4.12.tar.gz</code> for UNIX and
+  <code>tablelist4_12.zip</code> for Windows.&nbsp; These files contain the
   same information, except for the additional carriage return character
   preceding the linefeed at the end of each line in the text files for
   Windows.</p>
@@ -191,21 +191,21 @@
 
   <p>To install Tablelist <i>on UNIX</i>, <code>cd</code> to the desired
   directory and unpack the distribution file
-  <code>tablelist4.11.tar.gz</code>:</p>
+  <code>tablelist4.12.tar.gz</code>:</p>
 
   <blockquote>
     <pre>
-gunzip -c tablelist4.11.tar.gz | tar -xf -
+gunzip -c tablelist4.12.tar.gz | tar -xf -
 </pre>
   </blockquote>
 
-  <p>This command will create a directory named <code>tablelist4.11</code>,
+  <p>This command will create a directory named <code>tablelist4.12</code>,
   with the subdirectories <code>demos</code>, <code>doc</code>, and
   <code>scripts</code>.</p>
 
   <p><i>On Windows</i>, use WinZip or some other program capable of unpacking
-  the distribution file <code>tablelist4_11.zip</code> into the directory
-  <code>tablelist4.11</code>, with the subdirectories <code>demos</code>,
+  the distribution file <code>tablelist4_12.zip</code> into the directory
+  <code>tablelist4.12</code>, with the subdirectories <code>demos</code>,
   <code>doc</code>, and <code>scripts</code>.</p>
 
   <p>Note that the file <code>tablelistEdit.tcl</code> in the
